--- a/miniReproduce/miniReproduce/Assets/Scripts/Assembly_Game/Game.asmdef
+++ b/miniReproduce/miniReproduce/Assets/Scripts/Assembly_Game/Game.asmdef
@@ -4,6 +4,7 @@
     "references": [],
     "includePlatforms": [
         "Android",
+        "Editor",
         "iOS"
     ],
     "excludePlatforms": [],
